--- a/languages/mod-my-pages-sv_SE.po
+++ b/languages/mod-my-pages-sv_SE.po
@@ -1,6 +1,6 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: {{BPREPLACENAME}}\n"
+"Project-Id-Version: Mod My Pages\n"
 "POT-Creation-Date: 2022-03-28 16:14+0200\n"
 "PO-Revision-Date: 2022-03-28 16:14+0200\n"
 "Last-Translator: \n"
@@ -21,21 +21,21 @@ msgstr ""
 "X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #. Plugin Name of the plugin/theme
-msgid "{{BPREPLACENAME}}"
+msgid "Mod My Pages"
 msgstr ""
 
 #. Plugin URI of the plugin/theme
-msgid "https://github.com/{{BPREPLACEGITHUB}}/{{BPREPLACESLUG}}"
+msgid "https://github.com/helsingborg-stad/mod-my-pages"
 msgstr ""
 
 #. Description of the plugin/theme
-msgid "{{BPREPLACEDESCRIPTION}}"
+msgid "Modularity Wordpress Plugin"
 msgstr ""
 
 #. Author of the plugin/theme
-msgid "{{BPREPLACEAUTHOR}}"
+msgid "Nikolas Ramstedt"
 msgstr ""
 
 #. Author URI of the plugin/theme
-msgid "https://github.com/{{BPREPLACEGITHUB}}"
+msgid "https://github.com/helsingborg-stad"
 msgstr ""
