--- a/languages/mod-my-pages-sv_SE.po
+++ b/languages/mod-my-pages-sv_SE.po
@@ -1,17 +1,24 @@
 msgid ""
 msgstr ""
-"Project-Id-Version: \n"
-"POT-Creation-Date: \n"
-"PO-Revision-Date: 2022-10-27 12:29+0200\n"
+"Project-Id-Version: Mod My Pages\n"
+"POT-Creation-Date: 2022-11-10 13:53+0100\n"
+"PO-Revision-Date: 2022-11-10 13:54+0100\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: sv\n"
+"Language: sv_SE\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 1.8.12\n"
+"X-Poedit-Basepath: ..\n"
+"X-Poedit-WPHeader: mod-my-pages.php\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"X-Generator: Poedit 3.2\n"
-"X-Poedit-Basepath: .\n"
+"X-Poedit-SourceCharset: UTF-8\n"
+"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
+"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
+"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-SearchPath-0: .\n"
+"X-Poedit-SearchPathExcluded-0: *.js\n"
 
 #: source/php/AcfFields/php/mod-my-pages-protected-page.php:6
 msgid "My Pages Protected Page"
@@ -61,17 +68,21 @@ msgstr "Hemadress för Mina sidor"
 msgid "My Pages settings"
 msgstr "Inställningar för Mina sidor"
 
-#: source/php/Admin/OptionsPage.php:12 source/php/App.php:154
+#: source/php/Admin/OptionsPage.php:12 source/php/App.php:105
 msgid "My Pages"
 msgstr "Mina Sidor"
 
-#: source/php/App.php:105
+#: source/php/App.php:94
+msgid "You have been automatically logged out."
+msgstr "Du har loggats ut automatiskt."
+
+#: source/php/App.php:95
+msgid "Close"
+msgstr "Stäng"
+
+#: source/php/App.php:120
 msgid "My Pages Menu"
 msgstr "Mina sidor meny"
-
-#: source/php/App.php:122 source/php/App.php:124
-msgid "Login"
-msgstr "Logga in"
 
 #: source/php/Modules/MyAccount/MyAccount.php:15
 #: source/php/Modules/MyAccount/MyAccount.php:16
@@ -81,6 +92,10 @@ msgstr "Mina sidor: Mitt konto"
 #: source/php/Modules/MyAccount/MyAccount.php:17
 msgid "Displays account details for authenticated user"
 msgstr "Visar kontodetaljer för autentiserade användare"
+
+#: source/php/UI/DropdownMenu.php:37 source/php/UI/DropdownMenu.php:39
+msgid "Login"
+msgstr "Logga in"
 
 #. Plugin Name of the plugin/theme
 msgid "Mod My Pages"
